refactor: add ing project tags and refactor some of the code
